--- a/styles/index.css
+++ b/styles/index.css
@@ -2,7 +2,7 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Volkhov&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400&display=swap');
 
 
 *{
@@ -14,88 +14,88 @@
 
 /* General Settings Finish */
 
-
-.honeymoon-wrapper .honeymoon-image,
-.honeymoon-description-text{
+.honeymoon-wrapper{
     display: flex;
-    top: 50px;
+    gap: 70px;
+    justify-content: center;
+    text-align: start;
+    align-items: center;
     position: absolute;
-    left: 50px;
-    text-align: left;
-}
-
-.honeymoon-description-text{
-    position: absolute;
-    margin-top: 100px;
+    left: 200px;
+    bottom: 70px;
 }
 
 /* İmage Start */
 
-.plus-effects-honeymoon-two{
-   display: grid;
-   grid-template-columns: auto auto;
-   column-gap: 20px;
-}
-
-.plus-effects,
-.plus-effects-honeymoon{
-   display: flex;
-   gap: 20px;
-   font-family: 'Roboto', sans-serif;
-   position: absolute;
-   top: 640px;
-   left: 472px;
-   color: #E5E5E5;
-   font-size: 20px;
-}
-
-.plus-effects,
-.plus-honey-effects-color{
-    color: #DF6951;
-}
-
-
-.honeymoon-image{
-    margin-top: 100px;
-    margin-left: 320px;
-    width: 700px;
-    
-}
-
 .honeymoon-image img{
-    width: 580px;
-    height: 630px;
+    width: 750px;
+    height: 800px;
 }
 
 /* İmage Finish */
 
+/* Honeymoon Plus Effect Start */
+.honeymoon-plus-effects{
+    position: relative;
+    display: flex;
+    gap: 20px;
+    font-family: 'Roboto', sans-serif;
+    left: 636px;
+    bottom: -5px;
+    color: #E5E5E5;
+    font-size: 22px;
+}
+
+.honeymoon-plus-effect-two{
+    display: grid;
+    row-gap: 20px;
+    font-family: 'Roboto', sans-serif;
+    grid-template-columns: auto auto;
+    position: absolute;
+    gap: 20px;
+    left: 734px;
+    font-size: 22px;
+    bottom:28px;
+    color: #E5E5E5;
+}
+
+.honeymoon-plus-effects .honeymoon-plus-effect-color{
+    color: #DF6951;
+}
+
+.honeymoon-plus-effect-two .honeymoon-plus-effect-color{
+    color: #DF6951;
+    
+    
+}
+
+/* Honeymoon Plus Effect Finish */
+
 /* Description Text Start */
 
 .honeymoon-description-text{
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-    position: relative;
-    height: 350px;
-}
-
-.honeymoon-description-text .honeymoon-desc-etlabore{
-    width: 500px;
-    color: #000000;
     font-family: 'Poppins', sans-serif;
-
+    color: #000000;
+    width: 580px;
+    height: 400px;
 }
 
 .honeymoon-description-text .honeymoon-spacials-text {
     color: #DF6951;
     font-family: 'Poppins', sans-serif;
+    font-size: 18px;
 }
 
 .honeymoon-description-text .romantic-tropical-honey{
     color: #181E4B;
     font-family: 'Volkhov', serif;
+    font-size: 50px;
 }
 
+.honeymoon-description-text,
+.honeymoon-desc-etlabore{
+    font-size: 16px;
+}
 /* Description Finish */
 
 /* Button Start */
@@ -103,25 +103,21 @@
 .wiew-packages-btn{
     background-color: #DF6951;
     border : none;
-    max-width: 150px;
-    height: 48px;
+    max-width: 250px;
+    height: 50px;
     border-radius: 10px;
     color: #fff;
     font-family: 'Poppins', sans-serif;
     cursor: pointer;
     text-align: center;
     font-size: 21px;
+    padding: 15px;
 }
 
 .wiew-packages-btn .wiew-packages-text{
     position: relative;
     right: 15px;
     bottom: 5px;
-    transition: all 0.3s ease;
-}
-
-.wiew-packages-btn:hover{
-    font-size: 22px;
 }
 
 /* Button Finish */
