--- a/styles/index.css
+++ b/styles/index.css
@@ -1,73 +1,63 @@
-.img{
-display: flex;
-align-items: center;
-justify-content: space-evenly;
-
-
-}
-  .text-img{
-    display: flex;
-    align-items: center;
-    justify-content: space-evenly;
-    margin-top: 25px;
-    font-family: Arial, Helvetica, sans-serif;
-
-    
-   
-}
 .text-container{
     text-align: center;
     line-height: -50px;
-    margin-top: 6px;
-
+    margin-top: 9px; 
 }
 h5{
     color: #ff6600;
-    font-family: Arial, Helvetica, sans-serif;
-    margin-top: px;
+    font-family: sans-serif;
+    font-size: 16px;
     
 }
 h1{
-    margin-top: 20px;
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-     font-size: 42px;
-    
+    margin-top: 12px;
+    font-family:Georgia, 'Times New Roman', Times, serif;
+    font-size: 46px;
+    margin-top: 23px;
+  
 }
 h4{
-    margin-bottom: 160px;
-    margin-left: 250px;
-    text-align: center;
-   
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    margin-top: 40px;
+    margin-left: 90px;
 }
 p{
-    margin-top: 50px;
-    margin-right: ;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+.img-text{
+    display: flex;
+    margin-top: 62px;
+    margin-left: 90px;
+}
+.img-text4{
+    
+    margin-top: 31px;
+    
+}
+.img-text3{
+   
+   margin-top: 33px;
+   
+}
+.img-text2{
+  margin-top: 13px;
   
+ 
+}
+.img-text1{
+    margin-top: 36px;
+   
 }
 .img1{
-    margin-left: 20px;
-    margin-right: 50px;
-    margin-top: 30px;
-
+    margin-left: 117px;
   
 }
-.img2{
-   margin-left: 90px;
-   margin-right: 50px;
-   margin-top: 50px;
-}
-.img3{
-    margin-left: 10px;
-    margin-top: 63px;
-    
-}
-.img4{
-    margin-top: 50px;
-    margin-right: "-50px";
-}
-.text1{
-    margin-left: "-10px";
-}
-.text2{
-    
-}
+  .img2{
+    margin-left: 130px;
+  }
+  .img3{
+    margin-left: 120px;
+  }
+  .img4{
+    margin-left: 127px;
+  }
