--- a/styles/index.css
+++ b/styles/index.css
@@ -1,7 +1,7 @@
 /* General Settings Start */
 
 @import url('https://fonts.googleapis.com/css2?family=Volkhov&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900;1000;&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400&display=swap');
 
 
@@ -75,34 +75,38 @@
 .honeymoon-description-text{
     font-family: 'Poppins', sans-serif;
     color: #000000;
-    height: 300px;
+    position: relative;
+    bottom: 80px;
 }
 
 .honeymoon-description-text .honeymoon-spacials-text {
     color: #DF6951;
     font-family: 'Poppins', sans-serif;
     font-size: 18px;
+    height: 30px;
 }
 
 .honeymoon-description-text .romantic-tropical-honey{
     color: #181E4B;
     font-family: 'Volkhov', serif;
     font-size: 30px;
+    letter-spacing: 3.5px;
+    height: 90px;
 }
 
 .honeymoon-description-text,
 .honeymoon-desc-etlabore{
     font-size: 16px;
+    height: 90px;
 }
 /* Description Finish */
+
 
 /* Button Start */
 
 .wiew-packages-btn{
     background-color: #DF6951;
     border : none;
-    max-width: 250px;
-    height: 50px;
     border-radius: 10px;
     color: #fff;
     font-family: 'Poppins', sans-serif;
@@ -110,12 +114,6 @@
     text-align: center;
     font-size: 21px;
     padding: 15px;
-}
-
-.wiew-packages-btn .wiew-packages-text{
-    position: relative;
-    right: 15px;
-    bottom: 5px;
 }
 
 /* Button Finish */
