--- a/styles/index.css
+++ b/styles/index.css
@@ -1,63 +1,146 @@
-.text-container{
+.best-services{
+display:flex ;
+flex-direction: column;
+align-items: center;
+justify-content: space-between;
+gap: 21px;
+}
+.Homepage-best-services-1{
+   line-height: 27px;
+    color: #DF6951;
+    font-family: Poppins;
     text-align: center;
-    line-height: -50px;
-    margin-top: 9px; 
+    font-size: 18px;
 }
-h5{
-    color: #ff6600;
-    font-family: sans-serif;
-    font-size: 16px;
-    
+.Homepage-best-services-2{
+    font-size: 50px;
+    line-height: 64.5px;
+    text-align: center;
+    padding: 20px;
+    color: #181E4B;
+    font-family: volkhov;
 }
-h1{
-    margin-top: 12px;
-    font-family:Georgia, 'Times New Roman', Times, serif;
-    font-size: 46px;
-    margin-top: 23px;
-  
-}
-h4{
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    margin-top: 40px;
-    margin-left: 90px;
-}
-p{
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-}
-.img-text{
+.Homepage-best-services-img-text{
     display: flex;
-    margin-top: 62px;
-    margin-left: 90px;
+    gap: 160px;
+    margin-left: 50px;
 }
-.img-text4{
+.Homepage-best-services-img-text2{
+    position: relative;
+    left: 70px;
+    top: -310px;
+}
+.Homepage-best-services-3{
+    text-align: center;
+    font-size: 16px;
+    line-height: 26px;
+    padding: 12px;
+    font-family: poppins;
+    color: #5E6282;
+    font-weight: 500;
+    position: relative;
+    top: -38px;  
     
-    margin-top: 31px;
+}
+.Homepage-best-services{
+  text-align: center;
+  font-size: 20px;
+  font-family: poppins;
+  color: #1E1D4C;
+  padding: 42px;
+  font-weight: 600px; 
+}
+.Homepage-best-img1{
+    text-align: center;
+    position: relative;
+    left: 31px; 
+    top: 9px;
+}
+.Homepage-best-services-img2{
+    text-align: center;
+    position: relative;
+    left: 90px;
     
-}
-.img-text3{
-   
-   margin-top: 33px;
-   
-}
-.img-text2{
-  margin-top: 13px;
   
+    
+}
+.Homepage-best-services-img3{
+    text-align: center;
+    position: relative;
+    left: 22px;
+    top: 8px;
+}
+.Homepage-best-services-img4{
+    text-align: center;
+    position: relative;
+    left: 28px;
+    top: 5px;
+}
+.Hompage-1{
+    width: 50px;
+    height: 49px;
+    border-radius: 18px 5px 10px 5px;
+    background-color: #FFF1DA;
+    display: inline-block;
+    position: relative;
+    z-index: -1;
+    left: -31px;
+    top: 13px;
+}
+.Homepage-2{
+    width: 50px;
+    height: 49px;
+    border-radius: 18px 5px 10px 5px;
+    background: #FFF1DA;
+    display: inline-block;
+    position: relative;
+    z-index: -1;
+    left: -105px;
+    bottom: 25px;
+}
+.Homapage-3{
+    width: 50px;
+    height: 49px;
+    border-radius: 18px 5px 10px 5px;
+    background: #FFF1DA;
+    display: inline-block;
+    position: relative;
+    z-index: -1;
+    left: -38px;
+    top: 8px;
+}
+.Hompage-4{
+    width: 50px;
+    height: 49px;
+    border-radius: 18px 5px 10px 5px;
+    background: #FFF1DA;
+    display: inline-block;
+    position: relative;
+    z-index: -1;
+    left: -23px;
+}
+.Hompage-box-shadow{
+    width: 267px;
+    height: 314px;
+    border-radius: 36px;
+    background: var(--white, #FFF);
+    box-shadow: 0px 1.852px 3.148px 0px rgba(0, 0, 0, 0.00), 0px 8.148px 6.519px 0px rgba(0, 0, 0, 0.01), 0px 20px 13px 0px rgba(0, 0, 0, 0.01), 0px 38.519px 25.481px 0px rgba(0, 0, 0, 0.01), 0px 64.815px 46.852px 0px rgba(0, 0, 0, 0.02), 0px 100px 80px 0px rgba(0, 0, 0, 0.02);
+    display: block;
+    position: relative;
+    z-index: -2;
+    top: 280px;
+    
+}
+.Homepage-best-services-text2{
+   position: relative;
+   bottom: 30px;
  
 }
-.img-text1{
-    margin-top: 36px;
-   
+.Homapage-6{
+    top: 240px;
+    position: relative;
+    left: -287px;
+    z-index: -3;
+    top: 210px;   
 }
-.img1{
-    margin-left: 117px;
-  
-}
-  .img2{
-    margin-left: 130px;
-  }
-  .img3{
-    margin-left: 120px;
-  }
-  .img4{
-    margin-left: 127px;
-  }
+
