--- a/styles/index.css
+++ b/styles/index.css
@@ -16,21 +16,23 @@
 .honeymoon-project-container {
   display: flex;
   justify-content: center;
+  align-items: center;
 }
 
 .honeymoon-wrapper {
   display: flex;
+  gap: 100px;
   justify-content: center;
   align-items: center;
   text-align: left;
+  padding-left: 100px;
+  padding-top: 40px;
 }
 
 /* İmage Start */
 
 .honeymoon-image .honeymoon-img {
   width: 100%;
-  padding-left: 90px;
-  padding-top: 50px;
 }
 
 .honeymoon-image {
@@ -48,6 +50,7 @@
   right: -25px;
   color: #e5e5e5;
   font-size: 14px;
+  bottom: -20px;
 }
 .honeymoon-plus-effect-two {
   display: grid;
@@ -77,7 +80,8 @@
 .honeymoon-description-text {
   font-family: "Poppins", sans-serif;
   color: #000000;
-  padding: 145px;
+  
+  
 }
 
 .honeymoon-description-text .honeymoon-spacials-text {
@@ -90,15 +94,15 @@
 .honeymoon-description-text .romantic-tropical-honey {
   color: #181e4b;
   font-family: "Volkhov", serif;
-  font-size: 40px;
-  padding-bottom: 15px;
+  font-size: 35px;
+  padding-bottom: 10px;
 }
 
 .honeymoon-description-text,
 .honeymoon-desc-etlabore {
-  font-size: 12px;
-  padding-bottom: 10px;
+  font-size: 15px;
   font-family: "Poppins", sans-serif;
+  padding-bottom: 15px;
 }
 /* Description Finish */
 
@@ -112,7 +116,7 @@
   font-family: "Poppins", sans-serif;
   cursor: pointer;
   text-align: center;
-  font-size: 21px;
+  font-size: 19px;
   padding: 15px;
 }
 
