--- a/styles/index.css
+++ b/styles/index.css
@@ -15,37 +15,38 @@
     text-align: center;
     justify-content: center;
     align-items: center;
-   position: relative;
-   bottom: 30px;
-   right: 60px;
+    padding-top: 20px;
 }
 
 .out-trending-packages-text{
 color: #181E4B;
 text-align: center;
-font-family: Volkhov;
+justify-content: center;
+align-items: center;
+font-family: Volkhov, sans-serif;
 font-size: 50px;
 }
 
 .trendy-text{
-    color: #DF6951;
+color: #DF6951;
 text-align: center;
-font-family: Poppins;
+font-family: Poppins,sans-serif;
 font-size: 19px;
 }
 
 .trending-your-packages-container{
     align-items: center;
-    padding-left: 200px;
-    padding-top: 50px;
-    padding-right: 30px;
+    display: flex;
+    justify-content: center;
+    text-align: start;
 }
 
 .trending-your-packages-items{
     display: grid;
     flex-direction: column;
     grid-template-columns: auto auto auto;
-    gap: 40px;
+    gap: 60px;
+    padding-top: 30px;
 }
 
 
@@ -67,7 +68,7 @@ font-size: 19px;
 
 .img-swiss{
     position: absolute;
-    left: 10px;
+    left: 30px;
     top: 260px;
     border-radius: 10px;
 }
@@ -97,90 +98,95 @@ font-size: 19px;
 /* General Column Setting Finish */
 
 /* Other Setting Start */
-.country-info-switzerland{
+.country-info-all{
     display: flex;
-    margin-top: 40px;
+    padding-top: 45px;
     color: #7D7D7D;
-    font-family: Poppins;
+    font-family: Poppins, sans-serif;
     gap: 10px;
+    align-items: center;
 }
 
-.country-name-text-switzerland{
-    font-family: Poppins;
+.profile-icon{
+width: 20px;
+height: 20px;
+}
+
+.country-name-text-all{
+    font-family: Poppins,sans-serif;
     font-size: 30px;
+    display: flex;
     padding-top: 5px;
     cursor: pointer;
+    text-align: start;
 }
 
-.country-name-switzerland{
-   position: relative;
+.country-name-all{
+    display: flex;
+    align-items: center;
+    gap: 3px;
 }
 
-.star-point{
-  position: relative;
-  bottom: 32px;
-  left: 280px;
+.star-icons{
+    margin-left: 150px;
 }
 
-.navigation-country-switzerland{
+
+.navigation-country-all{
     display: flex;
     gap: 5px;
     align-items: center;
-    position: absolute;
-    bottom: -10px;
-    left: -4px;
 }
 
-.location-country-text-switzerland{
+.location-country-text-all{
    color: #7D7D7D;
-   font-family: Poppins;
+   font-family: Poppins, sans-serif;
+}
+
+.price-text-all{
+    display: flex;
+    align-items: center;
+    gap: 20px;
+    padding-bottom: 15px;
 }
 
 .onemilion{
-    position: absolute;
-    bottom: -70px;
     color: #DF6951;
     font-size: 30px;
-    font-family: Poppins;
+    font-family: Poppins, sans-serif;
 }
 
 .onemiliontwo{
     color: #7D7D7D;
-    font-family: Poppins;
+    font-family: Poppins, sans-serif;
     font-size: 20px;
-    position: absolute;
-    bottom: -62px;
-    left: 120px;
     text-decoration: line-through;
 }
 
-.country-description-text-switzerland{
-    position: absolute;
-    bottom: -210px;
-    font-size: 12px;
+.country-description-text-all{
+ text-align: start;
 }
 
-.description-text-switzerland{
-    font-family: Poppins;
+.description-text-all{
+    font-family: Poppins,sans-serif;
     padding-bottom: 10px;
 }
 
-.explore-now-btn-switzerland{
+.explore-now-btn{
     background-color: #DF6951;
     padding: 15px;
     text-align: center;
-    width: 120px;
     justify-content: center;
     align-items: center;
     color: #fff;
-    font-family: Poppins;
+    font-family: Poppins, sans-serif;
     border: none;
     border-radius: 8px;
     cursor: pointer;
     transition: all 0.3s ease;
 }
 
-.explore-now-btn-switzerland:hover{
+.explore-now-btn:hover{
     background-color: #bc3115;
 }
 
