--- a/styles/shared.css
+++ b/styles/shared.css
@@ -41,18 +41,22 @@ a {
 .company-and-destinitions-links .links-items-footer:hover{
   color: #df6951;
 }
-
-.travel-footer-logo-description{
-  display: grid;
-  flex-direction: column;
-  grid-template-columns:auto auto auto;
-}
-
 /* General Settings FİNİSH */
 
 .homepage-footer-container {
-  padding: 200px 400px;
+  display: flex;
+  justify-content: center;
+  margin-top: 95px;
+  position: relative;
 }
+
+.icons-settings-footer{
+  padding-top: 20px;
+  display: flex;
+  gap: 10px;
+}
+
+
 
 .company-and-destinitions-links {
   display: flex;
@@ -71,12 +75,6 @@ a {
   font-family: "Manrope", sans-serif;
 }
 
-.social-media-icons-footer {
-  display: flex;
-  gap: 15px;
-  padding-top: 35px;
-}
-
 /*Footer Logo and mini text FİNİSH*/
 
 /* Social Media İcons Start */
@@ -85,7 +83,11 @@ a {
   cursor: pointer;
 }
 
-/* Social Media İcons Start */
+.social-media-icons-footer{
+  padding-top: 20px;
+}
+
+/* Social Media İcons Finish */
 
 /*Join Our Text Start */
 
@@ -102,7 +104,6 @@ a {
 
 .your-email-adress {
   padding: 17px;
-  width: 69%;
   border: none;
   background: #eef;
 }
@@ -148,10 +149,16 @@ padding-top: 20px;
 
 
 .copyright-line{
+  margin-top: 50px;
   color: #E5E5EA;
   opacity: 0.4;
-  width: 60%;
-  margin-left: 20%;
 }
 
 /* Footer Copyright Text and Line Finish */
+
+.footer-background-img{
+  position: absolute;
+  right: 0;
+  top: 0;
+  z-index: -1;
+}
