--- a/styles/index.css
+++ b/styles/index.css
@@ -1,80 +1,72 @@
+
 .best-services{
 display:flex ;
 flex-direction: column;
 align-items: center;
 justify-content: space-between;
-gap: 21px;
+gap: 22px;
 }
 .Homepage-best-services-1{
-   line-height: 27px;
+   line-height: 28px;
     color: #DF6951;
-    font-family: "Poppins";
+    font-family: 'poppins', sans-serif;
     text-align: center;
-    font-size: 18px;
+    font-size: 18px;   
 }
 .Homepage-best-services-2{
     font-size: 50px;
-    line-height: 64.5px;
+    line-height: 64px;
     text-align: center;
     padding: 20px;
     color: #181E4B;
-    font-family:"volkhov";
+    font-family: 'Volkhov', sans-serif;
 }
-.Homepage-best-services-img-human{
+.Homepage-best-services-img-text{
     display: flex;
     gap: 160px;
-    margin-left: 50px;
-}
-.Homepage-best-services-img-plane{
-    position: relative;
-    left: 70px;
-    top: -310px;
+    align-items: center;
+    
 }
 .Homepage-best-services-paragraph-texts{
     text-align: center;
     font-size: 16px;
     line-height: 26px;
     padding: 12px;
-    font-family: "poppins";
+    font-family: 'poppins', sans-serif;
     color: #5E6282;
     font-weight: 500;
-    position:relative;
-    top: -38px;  
-    
+    margin-top: -38px;   
 }
 .Homepage-best-services-title-articles{
   text-align: center;
   font-size: 20px;
-  font-family: poppins;
+  font-family: 'poppins', sans-serif;
   color: #1E1D4C;
   padding: 42px;
   font-weight: 600px; 
+ 
 }
 .Homepage-best-human-img{
     text-align: center;
-    position: relative;
     left: 31px; 
-    top: 9px;
+    top: -9px;
+   
 }
 .Homepage-best-services-plane-img{
-    text-align: center;
-    position: relative;
-    left: 90px;
-    
-  
-    
+   left: 114px;
+   top: -40px;
+   position: absolute; 
+   z-index: 1; 
 }
 .Homepage-best-services-hands-img{
     text-align: center;
-    position: relative;
-    left: 22px;
+    left: -9px;
     top: 8px;
 }
 .Homepage-best-services-medical-img{
-    text-align: center;
-    position: relative;
-    left: 28px;
-    top: 5px;
+text-align: center;
+ left: 50px;
+ top: 10px;
 }
 .Hompage-box-1{
     width: 50px;
@@ -82,10 +74,10 @@ gap: 21px;
     border-radius: 18px 5px 10px 5px;
     background-color: #FFF1DA;
     display: inline-block;
-    position: relative;
+    position: absolute;
     z-index: -1;
-    left: -31px;
-    top: 13px;
+    left: 111px;
+    top: 36px;
 }
 .Hompage-box-2{
     width: 50px;
@@ -93,9 +85,9 @@ gap: 21px;
     border-radius: 18px 5px 10px 5px;
     background: #FFF1DA;
     display: inline-block;
-    position: relative;
+    position: absolute;
     z-index: -1;
-    left: -105px;
+    left: -10px;
     bottom: 25px;
 }
 .Hompage-box-3{
@@ -104,10 +96,10 @@ gap: 21px;
     border-radius: 18px 5px 10px 5px;
     background: #FFF1DA;
     display: inline-block;
-    position: relative;
+    position: absolute;
     z-index: -1;
-    left: -38px;
-    top: 8px;
+    left: 117px;
+    top: 30px;
 }
 .Hompage-box-4{
     width: 50px;
@@ -115,33 +107,45 @@ gap: 21px;
     border-radius: 18px 5px 10px 5px;
     background: #FFF1DA;
     display: inline-block;
-    position: relative;
+    position: absolute;
     z-index: -1;
-    left: -23px;
+    left: 140px;
+    top: 32px;
 }
-.Hompage-box-shadow{
-    width: 267px;
-    height: 314px;
-    border-radius: 36px;
-    background: var(--white, #FFF);
-    box-shadow: 0px 1.852px 3.148px 0px rgba(0, 0, 0, 0.00), 0px 8.148px 6.519px 0px rgba(0, 0, 0, 0.01), 0px 20px 13px 0px rgba(0, 0, 0, 0.01), 0px 38.519px 25.481px 0px rgba(0, 0, 0, 0.01), 0px 64.815px 46.852px 0px rgba(0, 0, 0, 0.02), 0px 100px 80px 0px rgba(0, 0, 0, 0.02);
-    display: block;
-    position: relative;
-    z-index: -2;
-    top: 280px;
+.Homepage-best-services-human{
+    position: absolute;
+    left: 90px;
+    top: 172px;
+}
+.Homepage-best-services-hands{
+    position: absolute;
+    right: 520px;
+    top: 180px;
+}
+.Homepage-best-services-medical{
+    position: absolute;
+    right: 130px;
+    top: 168px;
 
-    
 }
-.Homepage-best-services-plane-text{
-   position: relative;
-   bottom: 30px;
- 
+.Homepage-best-services-plane{
+    position: absolute;
+    left: 550px;
+    bottom: 300px;
+    box-shadow: 0px 1.852px 3.148px 0px rgba(0, 0, 0, 0.00), 0px 8.148px 6.519px 0px rgba(0, 0, 0, 0.01), 0px 20px 13px 0px rgba(0, 0, 0, 0.01), 0px 38.519px 25.481px 0px rgba(0, 0, 0, 0.01), 0px 64.815px 46.852px 0px rgba(0, 0, 0, 0.02), 0px 100px 80px 0px rgba(0, 0, 0, 0.02);
+    border-radius: 36px;
+    background-color: white;
+    padding: 45px 35px;
+    display: inline-block;
 }
-.Homapage-6{
-    top: 240px;
-    position: relative;
-    left: -287px;
-    z-index: -3;
-    top: 210px;   
+.orange-box{
+    left: -30px;
+    width: 96px;
+    height: 100px;
+    background-color: #df6951;
+    position: absolute;
+    border-radius: 28px;
+    bottom: -30px;
+    z-index: -2;
 }
 
