--- a/styles/index.css
+++ b/styles/index.css
@@ -44,36 +44,35 @@
   font-family: "poppins", sans-serif;
   color: #5e6282;
   font-weight: 500;
-  margin-top: -38px;
+  
 }
 .Homepage-best-services-title-articles {
   text-align: center;
   font-size: 20px;
   font-family: "poppins", sans-serif;
   color: #1e1d4c;
-  padding: 42px;
-  font-weight: 600px;
+  padding: 10px;
+  font-weight: 600;
 }
 .Homepage-best-human-img {
-  text-align: center;
-  left: 31px;
+  position: relative;
+  left: 80px;
   top: -9px;
 }
 .Homepage-best-services-plane-img {
-  left: 114px;
-  top: -40px;
-  position: absolute;
+  position: relative;
+  margin-left: 62px;
   z-index: 1;
 }
 .Homepage-best-services-hands-img {
-  text-align: center;
-  left: -9px;
-  top: 8px;
+  position: relative;
+  left: 50px;
+  top: -10px;
 }
 .Homepage-best-services-medical-img {
-  text-align: center;
+  position: relative;
   left: 50px;
-  top: 10px;
+  top: -10px;
 }
 .Hompage-box-1 {
   width: 50px;
@@ -83,7 +82,7 @@
   display: inline-block;
   position: absolute;
   z-index: -1;
-  left: 111px;
+  left: 30px;
   top: 36px;
 }
 .Hompage-box-2 {
@@ -105,8 +104,8 @@
   display: inline-block;
   position: absolute;
   z-index: -1;
-  left: 117px;
-  top: 30px;
+  left: 30px;
+  top: 26px;
 }
 .Hompage-box-4 {
   width: 50px;
@@ -116,28 +115,11 @@
   display: inline-block;
   position: absolute;
   z-index: -1;
-  left: 140px;
-  top: 32px;
-}
-.Homepage-best-services-human {
-  position: absolute;
-  left: 90px;
-  top: 172px;
-}
-.Homepage-best-services-hands {
-  position: absolute;
-  right: 520px;
-  top: 180px;
-}
-.Homepage-best-services-medical {
-  position: absolute;
-  right: 130px;
-  top: 168px;
+  left: 30px;
+  top: 27px;
 }
 .Homepage-best-services-plane {
-  position: absolute;
-  left: 550px;
-  bottom: 300px;
+  position: relative;
   box-shadow: 0px 1.852px 3.148px 0px rgba(0, 0, 0, 0),
     0px 8.148px 6.519px 0px rgba(0, 0, 0, 0.01),
     0px 20px 13px 0px rgba(0, 0, 0, 0.01),
