ufak-eksiklikler-projeye-eklendi-merge-hazır

--- a/styles/index.css
+++ b/styles/index.css
@@ -131,7 +131,7 @@
     align-items: center;
     display: flex;
     justify-content: center;
-    padding: 50px 0;
+    padding: 50px 20px;
 }
 
 /* Trending-Tour-Packages --->
