--- a/styles/index.css
+++ b/styles/index.css
@@ -229,3 +229,98 @@
 }
 
 /* Honeymoon Specails*/
+
+.testimonials-page-container {
+  background-image: url(/images/testimonial-background.jpg);
+  padding : 150px 0 66px 0;
+  background-size: cover;
+  position: relative;
+}
+
+.title-and-user-desc {
+  display: flex;
+  justify-content: center;
+}
+
+.user-review-desc {
+  width: 538px;
+  height: 280px;
+  margin: auto;
+  background-color: #fff;
+  border-radius: 10px;
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.description-icon {
+  position: absolute;
+  left: 42px;
+  top: 52px;
+}
+
+.user-desc-text {
+  text-align: center;
+  font-family: "Poppins", sans-serif;
+  font-size: 12px;
+  width: 402px;
+  padding-top: 20px;
+  line-height: 24px;
+  letter-spacing: 0.6px;
+}
+
+.designer-user-name {
+  text-align: center;
+  font-family: "Poppins", sans-serif;
+  font-size: 12px;
+  font-weight: 700;
+  line-height: 24px;
+  letter-spacing: 0.6px;
+  position: absolute;
+  bottom: 30px;
+}
+
+.promotion-text-desc {
+  color: #df6951;
+  font-family: "Poppins", sans-serif;
+  font-size: 18px;
+  max-width: 700px;
+  text-align: center;
+}
+
+.user-photo {
+  position: absolute;
+  top: -70px;
+}
+
+.about-us-text {
+  color: #181e4b;
+  text-align: center;
+  font-family: "Volkhov", sans-serif;
+  font-size: 50px;
+  padding-bottom: 94px;
+}
+
+.left-page-change{
+  position: absolute;
+  right: -66px;
+  cursor: pointer;
+}
+
+.change-page-lines{
+  padding-top: 20px;
+  text-align: center;
+  cursor: pointer;
+}
+
+.right-page-change{
+  position: absolute;
+  left: -66px;
+  cursor: pointer;
+}
+
+.container-picture{
+  position: absolute;
+  bottom: 0;
+}
